--- a/BE/wild-worker/build.gradle
+++ b/BE/wild-worker/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'org.springframework.session:spring-session-core'
     implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.15'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    testImplementation 'junit:junit:4.13.1'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5',
             // Uncomment the next line if you want to use RSASSA-PSS (PS256, PS384, PS512) algorithms:
             //'org.bouncycastle:bcprov-jdk15on:1.70',
