--- a/BC/package.json
+++ b/BC/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "@truffle/hdwallet-provider": "^2.1.9",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
+    "mysql2": "^3.2.0",
+    "solc": "^0.8.19",
+    "web3": "^1.9.0"
   }
 }
