--- a/FE/front/package.json
+++ b/FE/front/package.json
@@ -20,6 +20,7 @@
     "socket.io-client": "^4.6.1",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
